slightly reorganise things

--- a/2024-cfp.md
+++ b/2024-cfp.md
@@ -57,7 +57,7 @@ Here is how you can submit a presentation to our devroom:
     5. Click "Submit proposal!" and wait for our response. Thank you!
 
 If you run into issues with your submission, please reach out to us so we can
-assist you: `railways-devroom-devroom-manager (at) fosdem.org`
+assist you. See below for contact details.
 
 
 ## Recordings
@@ -66,3 +66,9 @@ The talks are usually recorded on-site. Any recordings will be published under
 the same license as all FOSDEM content (CC-BY-2.0). By agreeing to present in the
 Railways and Open Transport devroom, you automatically give permission to be
 recorded.
+
+
+## How can I contact you?
+
+You can reach the devroom's coordinators via email:
+`railways-devroom-devroom-manager (at) fosdem.org`
