Adjust date and time for devroom

--- a/2025-cfp.md
+++ b/2025-cfp.md
@@ -19,7 +19,7 @@ Once again, this will be excellent opportunity to show what you are doing and di
 For the Call for Presentations process:
 * 1 December: CfP submission deadline
 * 15 December: Announcement of selected talks
-* 1 February: Railways and Open Transport devroom at FOSDEM, you must be available onsite to present your talk (tentatively between 10:30 and 14:30 local time)
+* 2 February: Railways and Open Transport devroom at FOSDEM, you must be available onsite to present your talk (tentatively between 13:15 and 17:00 local time)
 
 ## Topics
 
@@ -66,7 +66,7 @@ Here is how you can submit a presentation to our devroom:
     1. Upload a **picture** of yourself if you haven't already
     2. Add your **name**
     3. We recommend to add a short **biography**, telling us and the audience a bit more about yourself
-    4. Regarding the availability, you don't have to add that. Our devroom will be on Saturday morning
+    4. Regarding the availability, you don't have to add that. Our devroom will be on Sunday afternoon
     5. Click "Submit proposal!" and wait for our response. Thank you!
 
 If you run into issues with your submission, please reach out to us so we can assist you. See below for contact details.
