--- a/2025-cfp.md
+++ b/2025-cfp.md
@@ -4,7 +4,7 @@ We are excited to announce that for the third time there will be a **Railways an
 
 We invite you to [participate](https://fosdem.org/submit) by presenting your work and projects in this space. We are primarily looking for 30 minutes presentations and also welcome short lightning talks.
 
-Once again, this will be excellent opportunity to show what you are doing and discuss it with like-minded people from the community.
+Once again, this will be an excellent opportunity to show what you are doing and discuss it with like-minded people from the community.
 
 > [!NOTE]
 > [FOSDEM](https://fosdem.org) is Europe's largest gathering of Free and Open Source Software developers and enthusiasts, with thousands of people attending and hundreds of talks taking place each year. FOSDEM 2025 will happen on the weekend of 1-2 February 2025 as an in-person event in Brussels, Belgium at the ULB university.
