Updates for 2025 edition

--- a/2025-cfp.md
+++ b/2025-cfp.md
@@ -77,6 +77,6 @@ The talks are recorded on-site. Any recordings will be published under the same 
 
 ## How can I contact you?
 
-The organizers of the devroom can be reached by sending email to `railways-devroom-devroom-manager (at) fosdem.org`. Please do not hesitate to contact us if you have any inquiry or suggestion for the devroom.
+To reach the organizers of the devroom you can open a thread on our [discussion board](https://github.com/OpenRailAssociation/FOSDEM/discussions). Please do not hesitate to contact us if you have any inquiry or suggestion for the devroom.
 
 Max Mehl, Simon Clavier, Cornelius Schumacher, Loic Hamelin, Peter Keller, Brede Dammen, Tu-Tho Thai - Railways and Open Transport devroom co-organizers
