update devroom time

--- a/2026-cfp.md
+++ b/2026-cfp.md
@@ -19,7 +19,7 @@ Once again, this will be an excellent opportunity to show what you are doing and
 For the Call for Presentations process:
 * 30 November: CfP submission deadline
 * 15 December: Announcement of selected talks
-* 31 January: Railways and Open Transport devroom at FOSDEM, you must be available onsite to present your talk (tentatively 13:00-17:00 local time)
+* 31 January: Railways and Open Transport devroom at FOSDEM, you must be available onsite to present your talk (15:00-19:00 local time)
 
 ## Topics
 
